company-brain/k8s/company-brain-ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: company-brain-ai

spec:
  replicas: 2

  selector:
    matchLabels:
      app: company-brain-ai

  template:
    metadata:
      labels:
        app: company-brain-ai

    spec:
      containers:
        - name: company-brain-ai
          image: company-brain-ai:v3
          imagePullPolicy: IfNotPresent

          ports:
          - containerPort: 8000
