company-brain/k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql

spec:
  serviceName: mysql
  replicas: 2

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql

        image: nginx

        ports:
        - containerPort: 80

        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
  - metadata:
      name: data

    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 0.5Gi
