company-brain/k8s/nginx-demo.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx-demo

  template:
    metadata:
      labels:
        app: nginx-demo

    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
