company-brain/k8s/company-brain-ai-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: company-brain-ai-service

spec:
  type: NodePort

  selector:
    app: company-brain-ai

  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30080
