company-brain/k8s/mysql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
    - port: 3306
