company-brain/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: company-brain-service

spec:
  selector:
    app: company-brain

  ports:
  - port: 80
    targetPort: 8000

  type: NodePort
